tests/models/enum/unnamed/bool/fail/max_length.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(max_length = 2)]
        bool
    ),
}
fn main() {}
